--- a/client/src/componant/categorie/categorieForm/categorieForm.css
+++ b/client/src/componant/categorie/categorieForm/categorieForm.css
@@ -1,6 +1,6 @@
 .categorie-form {
     max-width: 500px;
-    margin: 20px auto;
+    margin: 120px auto 50px auto;
     padding: 20px;
     background-color: #f9f9f9;
     border: 1px solid #ddd;
